<resources>
    <string name="app_name">Swabber</string>
    <string name="_00_00">00:00</string>
    <string name="swabber">Swabber</string>
    <string name="pause">Pause</string>
    <string name="new_game">NEW GAME</string>
    <string name="shop">shop</string>
    <string name="custom_game">CUSTOM GAME</string>
    <string name="select_game_mode">SELECT GAME MODE:</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="outbreak">OUTBREAK</string>
    <string name="epidemic">EPIDEMIC</string>
    <string name="pandemic">PANDEMIC</string>
    <string name="start">START</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="return_menu">Return to menu</string>
    <string name="return_game">Return to game</string>
    <string name="paused_game">The Game is paused</string>
    <string name="x">X</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="credits">Credits</string>
</resources>