<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/swabber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/textSwabberTitle" android:gravity="center"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:id="@+id/textDayCounter" android:layout_weight="1"
                android:gravity="center" tools:text="Day Counter" android:textColor="#000000" android:textSize="18sp"
                android:autoText="false" android:text="Day 1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/_00_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/timer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textSwabberTitle" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:textSize="56sp"
                android:fontFamily="monospace" android:shadowColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textColor="#FF0000"
                android:textStyle="bold"/>
        <Button
                android:text="@string/pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/pauseButton"
        />
        <Button
                android:text="@string/new_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/newGameButton" android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
