<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homescreenlight"><![CDATA["
>
    ]]>
    <ImageView
            android:id="@+id/imageSettings"
            app:srcCompat="@drawable/settings"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonMusicHome" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>
    <TextView
            android:id="@+id/textSwabber"
            android:text="@string/swabber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:textColor="#29C131"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:fontFamily="@font/aladin"/>
    <Button
            android:id="@+id/buttonInstructions"
            android:text="@string/instructions"
            android:layout_width="184dp"
            android:layout_height="42dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:background="@drawable/menu_button_short"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart" android:layout_marginTop="32dp"/>
    <Button
            android:id="@+id/buttonStart"
            android:text="@string/start"
            android:layout_width="128dp"
            android:layout_height="56dp"
            android:background="@drawable/menu_button_short"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/textSwabber" android:layout_marginTop="60dp"
            android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:id="@+id/buttonHighScores"
            android:text="@string/leaderboards"
            android:layout_width="183dp"
            android:layout_height="42dp"
            android:background="@drawable/menu_button_short"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonCredits"
            android:layout_marginBottom="32dp" app:layout_constraintTop_toBottomOf="@+id/buttonInstructions"
            app:layout_constraintVertical_bias="0.95"/>
    <Button
            android:id="@+id/buttonCredits"
            android:text="@string/credits"
            android:layout_width="183dp"
            android:layout_height="42dp"
            android:background="@drawable/menu_button_short"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="110dp"/>
    <ImageView
            android:id="@+id/buttonMusicHome"
            android:layout_width="36dp"
            android:layout_height="32dp" app:srcCompat="@drawable/music_on"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>


