<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DifficultyChoice" android:background="@drawable/homescreen_dark">

    <Button
            android:id="@+id/buttonOutbreak"
            android:text="@string/outbreak"
            android:layout_width="183dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/menu_button_short"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="30dp"
            android:fontFamily="@font/aladin" android:textSize="24sp"/>
    <Button
            android:id="@+id/buttonEpidemic"
            android:text="@string/epidemic"
            android:layout_width="183dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/menu_button_short"
            app:layout_constraintTop_toBottomOf="@+id/buttonOutbreak"
            app:layout_constraintBottom_toTopOf="@+id/buttonCustom" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="25dp" android:fontFamily="@font/aladin" android:textSize="24sp"/>
    <Button
            android:id="@+id/buttonPandemic"
            android:text="@string/pandemic"
            android:layout_width="183dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/menu_button_short"
            app:layout_constraintBottom_toTopOf="@+id/buttonCustom"
            app:layout_constraintTop_toBottomOf="@+id/buttonOutbreak" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="102dp" android:fontFamily="@font/aladin" android:textSize="24sp"/>
    <Button
            android:id="@+id/buttonCustom"
            android:text="@string/custom_game"
            android:layout_width="183dp"
            android:layout_height="52dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/menu_button_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonOutbreak" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="179dp" android:layout_marginBottom="20dp" android:fontFamily="@font/aladin"
            android:textSize="24sp"/>
    <TextView
            android:id="@+id/textSwabber2"
            android:text="@string/swabber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:textColor="#29C131"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:fontFamily="@font/aladin"/>
    <ImageView
            android:id="@+id/imageSettings"
            app:srcCompat="@drawable/settings"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonMusicDifficulty"
            android:layout_marginRight="20dp" android:layout_marginEnd="20dp"/>
    <ImageView
            android:id="@+id/buttonMusicDifficulty"
            android:layout_width="36dp"
            android:layout_height="32dp" app:srcCompat="@drawable/music_on"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"/>
    <TextView
            android:text="Choose Difficulty:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textSize="45sp" android:textColor="@color/white" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textSwabber2"
            android:fontFamily="@font/aladin" android:layout_marginTop="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>